--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.2.3",
+    "peerjs": "^1.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-player": "^2.16.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "postcss-nesting": "^12.1.2",
+    "tailwindcss": "^3.4.1"
   }
 }
